# LabAPS

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  README.md  desktop.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/: __init__.py  app.py  conftest.py  seed_admin.py
backend/bootstrap/: container.py  logging_setup.py
backend/config/: config.yaml  logging.yaml  settings.py  solver.yaml
backend/scripts/: seed_equipment.py
backend/shared/: api_response.py  auth.py  error_handlers.py  errors.py  health.py
backend/tests/: test_acceptance_e2e.py  test_app_factory.py  test_frontend_serving.py
docs/: ARCHITECTURE_INDEX.md  ARCHITECTURE_LOG.md  IMPLEMENTATION_STATUS.md  PROJECT_CONTEXT.md  README.md  RELEASE_READINESS.md
docs/01_Vision/: 01_Vision.md  02_Terminology.md
docs/02_SRS/: 01_Introduction.md  02_Business_Background.md  03_Business_Process.md  04_Functional_Requirements.md  05_Business_Object_Model.md
docs/03_SAD/: 01_Bussiness_Capability.md  02_System_Architecture.md  03_Domain_Architecture.md  04_Plan_Aggregate.md  05_Scheduling_Architecture.md  06_Application_Architecture.md  07_Database_Conceptual_Model.md  08_Plan_Lifecycle.md  09_Plan_Version_Architecture.md  10_Persistence_Architecture.md  11_Conceptual_ERD.md  12_Physical_Database_Design.md  (+9 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py
tools/: constants.py  context.py  engine.py  generator.py  labaps.py  manifest.yaml  manifest_loader.py  naming.py  renderer.py  writer.py
(+334 files in other folders)
