[project]
name = "lab-aps"
version = "1.0.0"
description = "Laboratory Advanced Planning & Scheduling Platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "frontend",
    "resources",
    "deployment",
]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade,
# B: bugbear, SIM: simplify, C4: comprehensions.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4"]
ignore = [
    "E501",  # line length handled by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["backend"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["frontend", ".venv"]

[tool.pytest.ini_options]
testpaths = ["backend", "tests"]
python_files = ["test_*.py"]
